style: fix contraste

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,8 @@
   --muted-foreground: oklch(0.554 0.046 257.417);
   --accent: oklch(0.968 0.007 247.896);
   --accent-foreground: oklch(0.208 0.042 265.755);
-  --highlight: oklch(0.71 0.16 158);
-  --highlight-foreground: oklch(0.64 0.18 158);
+  --highlight: oklch(0.52 0.14 190);
+  --highlight-foreground: oklch(0.44 0.14 190);
   --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: oklch(0.577 0.245 27.325);
   --border: oklch(0.929 0.013 255.508);
@@ -57,8 +57,8 @@
   --muted-foreground: oklch(0.704 0.04 256.788);
   --accent: oklch(0.279 0.041 260.031);
   --accent-foreground: oklch(0.984 0.003 247.858);
-  --highlight: oklch(0.71 0.16 158);
-  --highlight-foreground: oklch(0.64 0.18 158);
+  --highlight: oklch(0.52 0.14 190);
+  --highlight-foreground: oklch(0.44 0.14 190);
   --destructive: oklch(0.396 0.141 25.723);
   --destructive-foreground: oklch(0.637 0.237 25.331);
   --border: oklch(0.279 0.041 260.031);
@@ -95,7 +95,6 @@
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
   --color-highlight: var(--highlight);
-  --color-highlight-hover: var(--highlight-hover);
   --color-highlight-foreground: var(--highlight-foreground);
   --color-destructive: var(--destructive);
   --color-destructive-foreground: var(--destructive-foreground);
